--- a/RemoveWaterMark.ipynb
+++ b/RemoveWaterMark.ipynb
@@ -15,6 +15,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "Download NoWaterMark"
+      ],
+      "metadata": {
+        "id": "fVLFGfaoitzW"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -22,7 +31,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OHiAeDx8Y6tb",
-        "outputId": "987d059b-6cb8-40cd-9d16-27e59439028e"
+        "outputId": "617c19f8-b108-4ccc-e3d5-966589034ebf"
       },
       "outputs": [
         {
@@ -32,7 +41,7 @@
             "Cloning into 'nowatermark'...\n",
             "remote: Enumerating objects: 89, done.\u001b[K\n",
             "remote: Total 89 (delta 0), reused 0 (delta 0), pack-reused 89 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (89/89), 554.98 KiB | 4.59 MiB/s, done.\n",
+            "Receiving objects: 100% (89/89), 554.98 KiB | 34.69 MiB/s, done.\n",
             "Resolving deltas: 100% (33/33), done.\n"
           ]
         }
@@ -40,6 +49,17 @@
       "source": [
         "!git clone https://github.com/SixQuant/nowatermark.git"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Start Download example image and mask,<br>\n",
+        "if you want to use your image,<br>\n",
+        "you can upload your own image and mask by yourself."
+      ],
+      "metadata": {
+        "id": "BH-Vs22zh61s"
+      }
     },
     {
       "cell_type": "code",
@@ -51,29 +71,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BJaZg_EsavWP",
-        "outputId": "30a31246-7739-4bbb-abaf-7bc1164743a7"
+        "outputId": "a0098b8f-61ef-40a0-b5f9-b55ed024d9d6"
       },
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-10-02 10:24:19--  https://github.com/user-attachments/assets/e534338c-31d5-45b6-9f1c-3cfe62b8da31\n",
-            "Resolving github.com (github.com)... 140.82.112.4\n",
-            "Connecting to github.com (github.com)|140.82.112.4|:443... connected.\n",
+            "--2025-10-02 10:56:30--  https://github.com/user-attachments/assets/e534338c-31d5-45b6-9f1c-3cfe62b8da31\n",
+            "Resolving github.com (github.com)... 140.82.114.3\n",
+            "Connecting to github.com (github.com)|140.82.114.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://github-production-user-asset-6210df.s3.amazonaws.com/75261164/496075637-e534338c-31d5-45b6-9f1c-3cfe62b8da31.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20251002%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20251002T102419Z&X-Amz-Expires=300&X-Amz-Signature=5f4ed1518587e9ac48e0b9895f17cd59eb600b2ea11a51956b68bd131d243ab6&X-Amz-SignedHeaders=host [following]\n",
-            "--2025-10-02 10:24:19--  https://github-production-user-asset-6210df.s3.amazonaws.com/75261164/496075637-e534338c-31d5-45b6-9f1c-3cfe62b8da31.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20251002%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20251002T102419Z&X-Amz-Expires=300&X-Amz-Signature=5f4ed1518587e9ac48e0b9895f17cd59eb600b2ea11a51956b68bd131d243ab6&X-Amz-SignedHeaders=host\n",
-            "Resolving github-production-user-asset-6210df.s3.amazonaws.com (github-production-user-asset-6210df.s3.amazonaws.com)... 16.15.185.49, 3.5.27.139, 3.5.29.19, ...\n",
-            "Connecting to github-production-user-asset-6210df.s3.amazonaws.com (github-production-user-asset-6210df.s3.amazonaws.com)|16.15.185.49|:443... connected.\n",
+            "Location: https://github-production-user-asset-6210df.s3.amazonaws.com/75261164/496075637-e534338c-31d5-45b6-9f1c-3cfe62b8da31.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20251002%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20251002T105630Z&X-Amz-Expires=300&X-Amz-Signature=67e5080954d9a0fd8c2a2684f39a21aced2a97fb4febb772ca681545ab2d60f9&X-Amz-SignedHeaders=host [following]\n",
+            "--2025-10-02 10:56:30--  https://github-production-user-asset-6210df.s3.amazonaws.com/75261164/496075637-e534338c-31d5-45b6-9f1c-3cfe62b8da31.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20251002%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20251002T105630Z&X-Amz-Expires=300&X-Amz-Signature=67e5080954d9a0fd8c2a2684f39a21aced2a97fb4febb772ca681545ab2d60f9&X-Amz-SignedHeaders=host\n",
+            "Resolving github-production-user-asset-6210df.s3.amazonaws.com (github-production-user-asset-6210df.s3.amazonaws.com)... 54.231.199.129, 52.216.37.113, 3.5.3.152, ...\n",
+            "Connecting to github-production-user-asset-6210df.s3.amazonaws.com (github-production-user-asset-6210df.s3.amazonaws.com)|54.231.199.129|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 329920 (322K) [image/jpeg]\n",
             "Saving to: ‘example.jpg’\n",
             "\n",
-            "example.jpg         100%[===================>] 322.19K  --.-KB/s    in 0.09s   \n",
+            "example.jpg         100%[===================>] 322.19K  --.-KB/s    in 0.01s   \n",
             "\n",
-            "2025-10-02 10:24:19 (3.64 MB/s) - ‘example.jpg’ saved [329920/329920]\n",
+            "2025-10-02 10:56:30 (31.3 MB/s) - ‘example.jpg’ saved [329920/329920]\n",
             "\n"
           ]
         }
@@ -89,33 +109,42 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3KbAYukUcZoA",
-        "outputId": "e5c40c9c-7ef5-49b7-a297-63542a34100d"
+        "outputId": "40050a4b-ae7c-4518-fee0-c1f96699ff5e"
       },
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-10-02 10:28:47--  https://github.com/wayne931121/ai_image_prompt/raw/refs/heads/main/mask/grok.png\n",
-            "Resolving github.com (github.com)... 140.82.114.3\n",
-            "Connecting to github.com (github.com)|140.82.114.3|:443... connected.\n",
+            "--2025-10-02 10:56:33--  https://github.com/wayne931121/ai_image_prompt/raw/refs/heads/main/mask/grok.png\n",
+            "Resolving github.com (github.com)... 140.82.113.4\n",
+            "Connecting to github.com (github.com)|140.82.113.4|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/wayne931121/ai_image_prompt/refs/heads/main/mask/grok.png [following]\n",
-            "--2025-10-02 10:28:47--  https://raw.githubusercontent.com/wayne931121/ai_image_prompt/refs/heads/main/mask/grok.png\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.109.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+            "--2025-10-02 10:56:34--  https://raw.githubusercontent.com/wayne931121/ai_image_prompt/refs/heads/main/mask/grok.png\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 5821 (5.7K) [image/png]\n",
             "Saving to: ‘mask.png’\n",
             "\n",
-            "mask.png            100%[===================>]   5.68K  --.-KB/s    in 0s      \n",
+            "\rmask.png              0%[                    ]       0  --.-KB/s               \rmask.png            100%[===================>]   5.68K  --.-KB/s    in 0s      \n",
             "\n",
-            "2025-10-02 10:28:47 (49.0 MB/s) - ‘mask.png’ saved [5821/5821]\n",
+            "2025-10-02 10:56:34 (33.7 MB/s) - ‘mask.png’ saved [5821/5821]\n",
             "\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Show example images"
+      ],
+      "metadata": {
+        "id": "pz-yiu0ai7kI"
+      }
     },
     {
       "cell_type": "code",
@@ -129,9 +158,9 @@
           "height": 1000
         },
         "id": "uWPNDX8gbt7w",
-        "outputId": "0a249389-c6aa-4365-99bb-5953fed2d6c0"
+        "outputId": "7b21bd43-759c-42d7-cd67-49f062e57c26"
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -156,9 +185,9 @@
           "height": 1000
         },
         "id": "OxNGpzzvc--A",
-        "outputId": "79c000d2-53dc-4f88-8aca-808fd585832f"
+        "outputId": "22b5edfb-8690-4782-8046-e53663f0ec96"
       },
-      "execution_count": 12,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -173,13 +202,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Remove WaterMark"
+      ],
       "metadata": {
-        "id": "j7BBAaIFeSD8"
-      },
-      "execution_count": 19,
-      "outputs": []
+        "id": "CELujynGjAHJ"
+      }
     },
     {
       "cell_type": "code",
@@ -197,13 +226,34 @@
         "\n",
         "remover.remove_watermark( input_ , output )\n",
         "\n",
-        "None"
+        "print(\"Complete\")"
       ],
       "metadata": {
-        "id": "2esBTz32aSpF"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2esBTz32aSpF",
+        "outputId": "9d2124d5-9a6e-4e81-96f8-dc5340fe55f9"
       },
-      "execution_count": 21,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Complete\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Watch Result"
+      ],
+      "metadata": {
+        "id": "GaZ0Nx10jDAp"
+      }
     },
     {
       "cell_type": "code",
@@ -216,9 +266,9 @@
           "height": 1000
         },
         "id": "ZZ_YVXPyfQ0N",
-        "outputId": "c78ce98e-4ea8-4554-c9d1-42a2ef1456f8"
+        "outputId": "24d3f58f-17c0-467b-8925-5fc7950c40ec"
       },
-      "execution_count": 22,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
